--- a/client/pageStuff/list.html
+++ b/client/pageStuff/list.html
@@ -10,6 +10,13 @@
 <!-- 		{{parentid}} -->
     {{#each allPages}}
 <!-- 		<span class="js-page-choises css-page-choises {{readyORnot}}">{{title}}</span> -->
-		<a href="/cyoas/{{cyoaid}}/page/{{_id}}" class="css-page-choises {{readyORnot}}">{{title}}</a>
+		<a href="/cyoas/{{cyoaid}}/page/{{_id}}" class="css-page-choises js-page-choises {{readyORnot}}">{{title}}</a>
+    {{/each}}
+</template>
+<template name="existingPageList">
+<!-- 		{{parentid}} -->
+    {{#each existingPages}}
+<!-- 		<span class="js-page-choises css-page-choises {{readyORnot}}">{{title}}</span> -->
+		<a href="#" class="css-page-choises js-page-choises {{readyORnot}}">{{title}}</a>
     {{/each}}
 </template>
