--- a/client/cyoaStuff/list.html
+++ b/client/cyoaStuff/list.html
@@ -6,9 +6,9 @@
 <!-- 			<div class="light-border"> -->
 		<div>
 			{{#if url}}
-				<a href="{{url}}" class="css-cyoa-link">{{title}}</a>
+				<a href="{{url}}" class="css-link-cyoa css-link">{{title}}</a>
 			{{else}}
-				<a href="/cyoas/{{_id}}" class="css-cyoa-link">{{title}}</a>
+				<a href="/cyoas/{{_id}}" class="css-link-cyoa css-link">{{title}}</a>
 			{{/if}}
 			{{>deleteCyoa}}
 	<!-- 			</div> -->
