--- a/client/pageStuff/list.html
+++ b/client/pageStuff/list.html
@@ -1,4 +1,3 @@
-
 <template name="choiseList">
 <!-- 		{{parentid}} -->
     {{#each choicePages}}
@@ -8,6 +7,7 @@
 </template>
 <template name="allPageList">
 <!-- 		{{parentid}} -->
+<!-- 				{{> cyoaMeta}} -->
     {{#each allPages}}
 <!-- 		<span class="js-page-choises css-page-choises {{readyORnot}}">{{title}}</span> -->
 		<a href="/cyoas/{{cyoaid}}/page/{{_id}}" class="css-page-choises js-page-choises {{readyORnot}}">{{title}}</a>
