--- a/client/userstuff/item.html
+++ b/client/userstuff/item.html
@@ -1,3 +1,10 @@
 <template name="userItem">
-	User ID
+<!-- 	User ID 	Session.get("userHomeid"); -->
+<!-- {{#with user}} -->
+{{> userInfo}}
+{{> userLikes}}
+{{> userBooks}}
+{{> userWorlds}}
+{{> userCyoas}}
+<!-- {{/with}} -->
 </template>
