--- a/client/eventStuff/item.html
+++ b/client/eventStuff/item.html
@@ -11,7 +11,7 @@
 <!-- 		<span class="h1"> {{content}}</span> -->
 	<br>
 	<p>
-		Event's owner: <a href="/users/{{owner}}" class="css-link">{{ownerUserName}}</a>
+		Event's owner: <a href="/account/{{owner}}" class="css-link">{{ownerUserName}}</a>
 	</p>
 	<div class="css-description-area editable-text-trigger">Event's description: {{> editableText options=optionsHelper}}</div>
 		{{#if canEdit}}
