--- a/client/navbar.html
+++ b/client/navbar.html
@@ -11,7 +11,18 @@
 </template>
 
 <template name="navbar-plain">
-	<div class="navbar-right css-plain-nav">
-		{{> loginButtons}}
+	<div class="container">
+	<div class="row css-navbar">
+		<!--<span class="navbar-left css-navbar-left css-plain-nav">
+			{{#if currentUser}}
+				<a href="/account/{{currentUser._id}}">{{currentUser.username}}</a>
+			{{/if}}
+		</span>-->
+		<span class="navbar-right css-plain-nav">
+			{{> loginButtons}}
+<!-- 			<a href="/account/{{currentUser._id}}">{{> loginButtons}}</a> -->
+	<!-- 		{{> loginButtonsCustomised}} -->
+		</span>
+	</div>
 	</div>
 </template>
