--- a/client/worldStuff/item.html
+++ b/client/worldStuff/item.html
@@ -28,7 +28,7 @@
 			</span>
 		{{/each}}</p>
 	<p>
-		World's owner: <a href="/users/{{owner}}" class="css-link">{{ownerUserName}}</a>
+		World's owner: <a href="/account/{{owner}}" class="css-link">{{ownerUserName}}</a>
 	</p>
       <div class="css-description-area editable-text-trigger">World descryption: 
 <!--       <textarea class="css-description-area js-edit-text">{{descripion}}</textarea> -->
