--- a/client/worldStuff/list.html
+++ b/client/worldStuff/list.html
@@ -1,5 +1,7 @@
 <template name="worldList">
 <!--	 <h1>The worlds: </h1> -->
+	<div class="css-black-bg">
+	</div>
 	<div class="container css-the-worlds">
 		<div class="row css-the-world-list">
 			{{>world_add_form}}
@@ -7,7 +9,7 @@
 			{{> each_world}}
 			{{/each}}
 			{{> addWorld}}
-			</div>
+		</div>
 	</div>
 </template>
 <template name="each_world">
