--- a/client/cyoaStuff/item.html
+++ b/client/cyoaStuff/item.html
@@ -42,7 +42,7 @@
 
 <template name="addParam">
 {{#if currentUser}}
-	<button class="btn btn-lg css-adding-btn glyphicon glyphicon-plus js-show-page-form" aria-hidden="true" id="add-param-btn">
+	<button class="btn btn-lg css-adding-btn glyphicon glyphicon-plus js-show-page-form" aria-hidden="true" id="add-param-btn" title="Add Parameter">
 	</button>
 	{{/if}}
 	<a href="#" class="js-add-page">
@@ -85,57 +85,23 @@
 									<div>
 										<a href="#" data-data-index="{{data_index}}" class="glyphicon glyphicon-minus js-remove-data" style="color:red;"></a>
 										{{> editableText context=.. collection='cyoaParams' field=(get_name data_index)}}: 
+										<a href="#" data-data-index="{{data_index}}" class="glyphicon glyphicon-plus js-add-value"></a>
 										{{#each values data_index}}
 											{{#let value_Index=@index}}
 												<span style="color:#f00;" contenteditable="true" class="js-editable-value" data-data-index="{{data_index}}" data-value-index="{{value_Index}}" data-clicked="false">
 													{{this}}
 												</span>, 
-<!-- 													EDITABLE:{{> editableText context=.. collection='cyoaParams' field='(get_value data_index value_Index)'}}:TEXT, -->
+<!-- 													{{> editableText context=../.. collection='cyoaParams' field=(get_value data_index value_Index)}}, -->
 											{{/let}}
 										{{/each}}
-										<a href="#" data-data-index="{{data_index}}" class="glyphicon glyphicon-plus js-add-value"></a>
 									</div>
 								{{/let}}
 							{{/each}}
+							<p>
+							<br>
 								<a href="#" class="glyphicon glyphicon-plus js-add-data"></a>
-<!-- 							{{#each data}} -->
-<!-- 										{{> editableText context=.. collection='cyoaParams' field=(get_name 0)}}:  -->
-<!-- 							{{#each value 0}} -->
-<!-- 							{{this}} -->
-<!-- 								{{#let value_Index=@index}} -->
-<!-- 									<div style="color:#0f0;"> -->
-<!-- 									{{get_value 0 value_Index}} -->
-<!-- 										{{> editableText context=.. collection='cyoaParams' field=(get_value 0 value_Index)}}, -->
-<!-- 									</div> -->
-<!-- 								{{/let}} -->
-<!-- 							{{/each}} -->
-<!-- 							{{/each}} -->
-<!-- 							{{> editableText context=.. collection='cyoaParams' field=(get_value 0 1)}}, -->
+							</p>
 						{{/with}}
-<!-- 						{{#autoForm id="updateParamForm" type="update" collection=CyoaParams.data doc=exampleDoc setArrayItems=true}} -->
-						
-
-						
-<!-- 							{{> afQuickField name="data.size=get_data_size.name"}} -->
-<!-- 							{{> afQuickField name="data.{{get_data_size}}.value"}} -->
-<!-- 						 -->
-<!-- 						{{#autoForm id="updateParamForm" collection="CyoaParams" type="update"}} -->
-<!-- 								{{> afQuickField name="title"}} -->
-<!-- 								{{> afQuickField name="data"}} -->
-<!-- 								{{> afArrayField name="data" label="data"}} -->
-<!-- 								{{> afQuickField name="data-title" label="title"}} -->
-<!-- 								{{> afQuickField name="data-value" label="value"}} -->
-<!-- 								{{> afQuickField name="data-value" label="value"}} -->
-<!-- 								{{> afQuickField name="data-title" label="title"}} -->
-<!-- 								{{> afQuickField name="data-value" label="value"}} -->
-							<!--	{{> afQuickField name="data"}} label="Data-value"}} label="Data-title"}}
-								{{> afQuickField name="data-value"}}-->
-<!-- 								{{> afQuickField name="cyoaid" value=cyoa_id}} -->
-<!-- 								<div class="form-group"> -->
-<!-- 									<button type="submit" class="btn btn-primary js-btn js-btn-addparam-field">Submit</button> -->
-<!-- 								</div> -->
-<!-- 								disabled="{{disableButtons}}" -->
-<!-- 							{{/autoForm}} -->
 					</div>
 				</div>
 			</div>
@@ -150,18 +116,3 @@
 		{{/each}}
 	</div>
 </template>
-<!--
-<template name="param_add_form">
-	<div class="modal fade" id="param_add_form">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-body">
-					<div class="form-group">
-						{{>quickForm collection="CyoaParams" id="new-param" meteormethod="addParam" type="method"}}
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</template>
--->
