--- a/client/pageStuff/item.html
+++ b/client/pageStuff/item.html
@@ -22,11 +22,11 @@
 </template>
 
 <template name="addPage">
-{{#if currentUser}}
-	<button class="btn btn-lg css-adding-btn glyphicon glyphicon-plus js-show-page-form" aria-hidden="true">
-	</button>
+	{{#if currentUser}}
+		<button class="btn btn-lg css-adding-btn glyphicon glyphicon-plus js-show-page-form" aria-hidden="true" title="Add Page">
+		</button>
 	{{/if}}
- <a href="#" class="js-add-page">
+	<a href="#" class="js-add-page">
 	</a>
 </template>
 
