fixed sweetalert error plus some start on netTree

--- a/client/cyoaStuff/item.html
+++ b/client/cyoaStuff/item.html
@@ -22,9 +22,9 @@
 		<div id="visualization">
 <!-- 			{{>event_add_form}} -->
 		</div>
-		<div id="constantPages_display">
+<!-- 		<div id="constantPages_display"> -->
 <!-- 		{{>constantPageItem}} -->
-		</div>
+<!-- 		</div> -->
 	</div>
 </template>
 <template name="cyoaMeta">
