added pagetree and fixed first page showing up as breaking with pther constant pages

--- a/client/eventStuff/list.html
+++ b/client/eventStuff/list.html
@@ -22,8 +22,8 @@
 	</div>
 </template>-->
 <template name="eventList">
-	<script src="http://t4t5.github.io/sweetalert/dist/sweetalert.min.js"></script>
-	<link href="http://t4t5.github.io/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css"/>
+<!-- 	<script src="http://t4t5.github.io/sweetalert/dist/sweetalert.min.js"></script> -->
+<!-- 	<link href="http://t4t5.github.io/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css"/> -->
 	<div id="eventList">
 		<div id="visualization">
 <!-- 			{{>event_add_form}} -->
