--- a/client/pageStuff/list.html
+++ b/client/pageStuff/list.html
@@ -10,7 +10,7 @@
 <!-- 	<script src="http://t4t5.github.io/sweetalert/dist/sweetalert.min.js"></script> -->
 <!-- 	<link href="http://t4t5.github.io/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css"/> -->
 	<div id="allPageList">
-		<div id="visualization">
+		<div id="treeVisualization">
 		</div>
 	<!--	<div id="event_display">
 		{{>treeItem}}
