--- a/client/cyoaStuff/item.html
+++ b/client/cyoaStuff/item.html
@@ -16,8 +16,8 @@
 </template>
 
 <template name="constantPages">
-	<script src="http://t4t5.github.io/sweetalert/dist/sweetalert.min.js"></script>
-	<link href="http://t4t5.github.io/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css"/>
+<!-- 	<script src="http://t4t5.github.io/sweetalert/dist/sweetalert.min.js"></script> -->
+<!-- 	<link href="http://t4t5.github.io/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css"/> -->
 	<div id="constantPages">
 		<div id="visualization">
 <!-- 			{{>event_add_form}} -->
