--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,8 @@
 <template name="ApplicationLayout">
 <head>
 	<title>wikiWorlds</title>
+	<script type="text/javascript" src="http://visjs.org/dist/vis.js"></script>
+  <link href="http://visjs.org/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
 </head>
 		{{> yield "header"}}
 
