--- a/client/main.html
+++ b/client/main.html
@@ -2,7 +2,8 @@
 <head>
 	<title>wikiWorlds</title>
 	<script type="text/javascript" src="http://visjs.org/dist/vis.js"></script>
-  <link href="http://visjs.org/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
+<link href="http://visjs.org/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
+  <link href="http://visjs.org/dist/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
 </head>
 		{{> yield "header"}}
 
