--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,12 @@
 <template name="ApplicationLayout">
 <head>
 	<title>wikiWorlds</title>
-	<script type="text/javascript" src="http://visjs.org/dist/vis.js"></script>
-<link href="http://visjs.org/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
-  <link href="http://visjs.org/dist/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
+<!-- 	<script type="text/javascript" src="http://visjs.org/dist/vis.js"></script> -->
+<!-- <link href="http://visjs.org/dist/vis-network.min.css" rel="stylesheet" type="text/css" /> -->
+<!--   <link href="http://visjs.org/dist/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" /> -->
+	<script type="text/javascript" src="/scripts/vis.js"></script>
+	<link href="/assets/vis-network.min.css" rel="stylesheet" type="text/css" />
+	<link href="/assets/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
 </head>
 		{{> yield "header"}}
 
